# legion-stage-2-ios-port

./: .gitignore  CMakeLists.txt  deploy-testflight.sh
build-ios/: CMakeCache.txt  cmake_install.cmake
build-ios/CMakeScripts/: ReRunCMake.make
build-ios/Sequencer.xcodeproj/: project.pbxproj
build-ios/Sequencer_artefacts/Debug/Legion Stage 2.app/: Assets.car  Info.plist  embedded.mobileprovision
build-ios/Sequencer_artefacts/Debug/Legion Stage 2.app.dSYM/Contents/: Info.plist
build-ios/Sequencer_artefacts/Debug/Legion Stage 2.app/_CodeSignature/: CodeResources
build-ios/Sequencer_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ios/Sequencer_artefacts/JuceLibraryCode/Debug/: Defs.txt
build-ios/Sequencer_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
build-ios/Sequencer_artefacts/JuceLibraryCode/Sequencer/: Info.plist
build-ios/libs/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build-ios/libs/JUCE/CMakeScripts/: ReRunCMake.make
build-ios/libs/JUCE/JUCE.xcodeproj/: project.pbxproj
build-ios/libs/JUCE/modules/: cmake_install.cmake
build-ios/libs/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
build-ios/libs/JUCE/tools/CMakeScripts/: ReRunCMake.make
build-ios/libs/JUCE/tools/JUCE.xcodeproj/: project.pbxproj
build-ios/libs/JUCE/tools/modules/: cmake_install.cmake
src/: ClipPlayerNode.cpp  ClipPlayerNode.h  CrashLog.h  DawLookAndFeel.h  DawTheme.h  FrostLookAndFeel.h  GForceComponent.h  GainProcessor.cpp  GainProcessor.h  GamepadHandler.cpp  GamepadHandler.h  GamepadOverlayComponent.h  GeissComponent.h  GlassLookAndFeel.h  IceLookAndFeel.h  IndigoLookAndFeel.h  JournalLookAndFeel.h  KeystageLookAndFeel.h  LinenLookAndFeel.h  LissajousComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Midi2Handler.cpp  Midi2Handler.h  MidiCaptureBuffer.h  MidiClip.h  MixerComponent.h  NoirLookAndFeel.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginHost.cpp  PluginHost.h  ProjectMComponent.h  QuickKeysHandler.cpp  QuickKeysHandler.cpp.local  QuickKeysHandler.h  QuickKeysHandler.h.local  SequencerEngine.cpp  SequencerEngine.h  (+11 more)
